# netwire

./: .boring  LICENSE  Makefile  README.md  Setup.lhs  default.nix  netwire.cabal
Control/: Wire.hs
Control/Wire/: Core.hs  Event.hs  FRP.hs  Interval.hs  Semantics.hs  Session.hs  State.hs  Switch.hs  Time.hs  Timeline.hs  Wire.hs
Control/Wire/FRP/: Analyze.hs  Combine.hs  Core.hs  Event.hs  Move.hs  Noise.hs  Occasion.hs  Switch.hs  Types.hs
Control/Wire/FRP/Event/: Unsafe.hs
Control/Wire/Unsafe/: Event.hs
FRP/Netwire/: Noise.hs
test/: Bench.hs  Props.hs  Test.hs
