name:          netwire
version:       5.0.0
category:      FRP
synopsis:      Functional reactive programming library
maintainer:    Ertugrul Söylemez <es@ertes.de>
author:        Ertugrul Söylemez <es@ertes.de>
copyright:     (c) 2013 Ertugrul Söylemez
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.10
extra-source-files: README.md
description:
    This library provides interfaces for and implements wire arrows
    useful both for functional reactive programming (FRP) and locally
    stateful programming (LSP).

Source-repository head
    type:     darcs
    location: http://hub.darcs.net/ertes/netwire

library
    build-depends:
        base         >= 4.5 && < 5,
        containers   >= 0.5 && < 1,
        linear       >= 1.1 && < 2,
        transformers >= 0.3 && < 1,
        time         >= 1.4 && < 2
    default-language: Haskell2010
    default-extensions:
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleInstances
        FunctionalDependencies
        RankNTypes
        MultiParamTypeClasses
        TupleSections
    ghc-options: -W
    exposed-modules:
        Control.Wire
        Control.Wire.FRP
        Control.Wire.FRP.Analyze
        Control.Wire.FRP.Core
        Control.Wire.FRP.Move
        Control.Wire.FRP.Occasion
        Control.Wire.FRP.Switch
        Control.Wire.FRP.Types
        Control.Wire.Session
        Control.Wire.State
        Control.Wire.Wire

executable netwire-test
    build-depends:
        base >= 4.5 && < 5,
        containers,
        linear,
        netwire
    default-language: Haskell2010
    default-extensions:
        Arrows
        OverloadedStrings
        RecursiveDo
    ghc-options: -threaded -rtsopts
    hs-source-dirs: test
    main-is: Test.hs

-- test-suite tests
--     type: exitcode-stdio-1.0
--     build-depends:
--         base >= 4.5 && < 5,
--         netwire,
--         QuickCheck,
--         test-framework,
--         test-framework-quickcheck2,
--         test-framework-th,
--         vty
--     default-language: Haskell2010
--     default-extensions:
--         TemplateHaskell
--     ghc-options: -W -threaded -rtsopts -with-rtsopts=-N
--     hs-source-dirs: test
--     main-is: Props.hs

-- benchmark bench
--     type: exitcode-stdio-1.0
--     build-depends:
--         base >= 4.5 && < 5,
--         criterion,
--         netwire
--     default-language: Haskell2010
--     default-extensions:
--     ghc-options: -W -threaded -rtsopts
--     hs-source-dirs: test
--     main-is: Bench.hs
